Bug 237138 Disabled form controls are not always greyed out r/sr=bz a=asa