mozilla/gfx/src/windows/nsNativeThemeWin.cpp
@@ -337,13 +337,11 @@ static PRBool CheckBooleanAttr(nsIFrame* aFrame, nsIAtom* aAtom)
 {
   if (!aFrame)
     return PR_FALSE;
+  if (!aFrame->GetContent()->IsContentOfType(nsIContent::eXUL))
+    return aFrame->GetContent()->HasAttr(kNameSpaceID_None, aAtom);
   nsAutoString attr;
-  nsresult res = aFrame->GetContent()->GetAttr(kNameSpaceID_None, aAtom, attr);
-  if (res == NS_CONTENT_ATTR_NO_VALUE ||
-      (res != NS_CONTENT_ATTR_NOT_THERE && attr.IsEmpty()))
-    return PR_TRUE; // This handles the HTML case (an attr with no value is like a true val)
-  return attr.Equals(NS_LITERAL_STRING("true"), // This handles the XUL case.
-                     nsCaseInsensitiveStringComparator()); 
+  aFrame->GetContent()->GetAttr(kNameSpaceID_None, aAtom, attr);
+  return attr.Equals(NS_LITERAL_STRING("true")); 
 }
 
 static PRBool
